--- a/style/blog.css
+++ b/style/blog.css
@@ -1,93 +1,129 @@
-body{
-    margin: 0px 100px;
-    padding: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+.{
+    margin: 0;
+    padding: 0;
+  }
+  body {
+      margin: 10px;
+      padding: 20px;
+      background-color: #f7fbfa; 
+     
+    }
+    .banner{
+      display: flex;
+    }
+    .banner {
+      text-align: left;
+      margin: 80px 160px 20px 20px ;
+      padding: 40px;
+      background-color: #e8f7f0; 
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  
+      height: auto; 
+      position: relative; 
+    }
+  
+  
+    
+    .header {
+      font-size: 20px;
+      color: rgba(0, 0, 0, 0.404);
+      margin-bottom: 10px;
+      font-weight: bold;
+    }
+    
+    .title {
+      font-size: 35px;
+      line-height: 1.5;
+      color: black;
+      margin: 15px ;
+      margin-right: 220px;
+    }
+    
+    .btn {
+      background-color: #007f5f;
+      color: white;
+      padding: 15px 10px;
+      border: none;
+      border-radius: 5px;
+      font-size: 15px;
+      cursor: pointer;
+      margin-top: 45px;
+    }
+    
+    .btn:hover {
+      background-color: #005941;
+    }
+    
+    .section-description{
+      color: rgba(14, 14, 14, 0.7);
+  }
+  /* skills section */
+  .skills-container{
+      display: flex;
+      gap: 24px;
+      padding: 32px;
+      border-radius: 5px;
+     
+  }
+  .skill{
+      padding: 32px;
+      border-radius: 5px;
+      box-shadow:0px 6px 30px 0px rgb(211, 216, 223);
+     
+  
+  }
+  main section{
+      margin-top: 130px;
+      margin-bottom: 130px;
+  }
+  /* satalight */
+  .satalight  { 
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    background-color: #ffffff;
-
-}
-/* nav */
-.nav{
-    margin: 0px 100px;
-    background-color: #a5ffe7;
-    border-radius: 25px;
-}
-
-/* header */
-.header{
-    font-size: 20px;
-    color: #262525;
-    margin-bottom: 10px;
+    gap: 40px;
+    padding: 32px;
+    border-radius: 5px;
+    box-shadow:0px 6px 30px 0px rgb(211, 216, 223);
+    text-align: left;
+  }
+.bb{
     font-weight: bold;
-
-}
-
-
- .model{
-    color: #aba1a1;
- }
-
-/* button */
-.button{
-    color: #006A50;
-    -webkit-text-fill-color: #f7ffff;
-    border-radius: 10px;
+    font-size: 32px;
+    line-height: 1.5;
+    color: black;
+    margin: 15px ;
     
 }
-.button{
-    background-color: #005941;
-
-    width: 270px;
-    height: 56px;
-    font-weight: 300;
-    font-size: 18px;
-    color: rgba(255, 255, 255, 1.00);
-}
-/* banner */
-.banner{
+.satalight2{
     display: flex;
-   
-}
 
-.banner-content{
-    max-width: 580px;
-}
-.banner-greetings{
-    font-size: 24px;
-    color: #5b5757;
-    font-weight: 600;
-}
-.banner-title{
-    font-weight: bold;
-    font-size: 56px;
-}
-.banner-pro-pic{
-    width: 480px;
-}
-.digital{
-box-sizing: border-box;
-padding: 5px;
-border-radius: 16px;
-width:auto;
-height: auto;
-background: rgba(84, 144, 245, 0.2);
+    gap: 40px;
+     padding: 32px;
+     border-radius: 5px;
+     box-shadow:0px 6px 30px 0px rgb(211, 216, 223);
+     text-align: left;
+   }
+   .parents{
+    display: flex;
+    justify-content: space-around;
+    gap: 24;
+    padding: 40px;
 
-
-}
-.image{
-position: absolute;
-width: 49.66px;
-height: 53.09px;
-left: 13.34px;
-top: 1px;
-}
-/* section */
-.section{
-    background-color: white;
-    height: 1280px;
-    width: 765px;
-}
+   }
+   .child{
+    border: 2px solid rgb(237, 232, 232);
+    padding: 20px;
+    font-size: 18px;
+    margin: 10px 0;
+    display: inline;
+    gap: 20PX;
+   }
+   .donate{
+    text-align: center;
+    gap: 10px;
+   }
+   .form{
+    margin: 10px;
+     padding: 20px 40px 20px 40px;
+    background-color: #d6e4e1;
+   }
