--- a/style/blog.css
+++ b/style/blog.css
@@ -41,9 +41,9 @@
     }
     
     .btn {
-      background-color: #007f5f;
+      background-color: rgb(0, 106, 80);
       color: white;
-      padding: 15px 10px;
+      padding: 17px 34px 17px 34px;
       border: none;
       border-radius: 5px;
       font-size: 15px;
