--- a/style/blog.css
+++ b/style/blog.css
@@ -123,7 +123,17 @@
     gap: 10px;
    }
    .form{
-    margin: 10px;
-     padding: 20px 40px 20px 40px;
+    margin: 15px;
+    padding: 20px 40px 20px 40px;
     background-color: #d6e4e1;
    }
+/* PARENT & CHILD */
+.btn-container{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  gap: 24px;
+  padding: 40px;
+  text-align: 24px;
+  
+}
